--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="" />
+    <link rel="stylesheet" href="/src/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Dashboard</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <div class="sidebar">
+        sidebar
+      </div>
+      <div class="header">
+        header
+      </div>
+      <div class="main-content">
+        main content
+      </div>
+    </div>
   </body>
 </html>
