--- a/index.html
+++ b/index.html
@@ -10,7 +10,24 @@
   <body>
     <div id="app">
       <div class="sidebar">
-        sidebar
+        <div class="sidebar__header">Dashboard</div>
+        <div class="sidebar__navigation">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Profile</a></li>
+            <li><a href="#">Messages</a></li>
+            <li><a href="#">History</a></li>
+            <li><a href="#">Tasks</a></li>
+            <li><a href="#">Community</a></li>
+          </ul>
+        </div>
+        <div class="sidebar__navigation">
+          <ul>
+            <li><a href="#">Settings</a></li>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Privacy</a></li>
+          </ul>
+        </div>
       </div>
       <div class="header">
         header
