feat: Add search bar and name to header

--- a/index.html
+++ b/index.html
@@ -30,7 +30,18 @@
         </div>
       </div>
       <div class="header">
-        header
+        <div class="header__container">
+          <form>
+            <label for="search-input">Search:</label>
+            <input type="search" id="search-input">
+          </form>
+          <div class="header__container__icons">
+            <i></i>
+            <i></i>
+            <p>Justin Yang</p>
+          </div>
+        </div>
+        <div class="header__container"></div>
       </div>
       <div class="main-content">
         main content
