feat: Add buttons and welcome text to header

--- a/index.html
+++ b/index.html
@@ -41,7 +41,20 @@
             <p>Justin Yang</p>
           </div>
         </div>
-        <div class="header__container"></div>
+        <div class="header__container">
+          <div class="header__container__welcome">
+            <i></i>
+            <div class="header__container__welcome__message">
+              <p class="small bold">Hi there,</p>
+              <p class="large bold">Justin Yang (@TheDodoDev)</p>
+            </div>
+          </div>
+          <div class="header__container__buttons">
+            <button>New</button>
+            <button>Upload</button>
+            <button>Share</button>
+          </div>
+        </div>
       </div>
       <div class="main-content">
         main content
