feat: Add project cards to main content

--- a/index.html
+++ b/index.html
@@ -57,7 +57,26 @@
         </div>
       </div>
       <div class="main-content">
-        main content
+        <div class="main-content__projects">
+          <p class="bold left-align">Your Projects</p>
+          <div class="main-content__projects__cards">
+            <div class="main-content__projects__cards__card">
+            </div>
+            <div class="main-content__projects__cards__card">
+            </div>
+            <div class="main-content__projects__cards__card">
+            </div>
+            <div class="main-content__projects__cards__card">
+            </div>
+            <div class="main-content__projects__cards__card">
+            </div>
+            <div class="main-content__projects__cards__card">
+            </div>
+          </div>
+        </div>
+        <div class="main-content__social">
+
+        </div>
       </div>
     </div>
   </body>
