feat: Add divisions for Announcements and Trending

--- a/index.html
+++ b/index.html
@@ -75,7 +75,18 @@
           </div>
         </div>
         <div class="main-content__social">
+          <div class="main-content__social__announcements">
+              <p class="bold left-align">Announcements</p>
+              <div class="main-content__social__announcements__cards">
 
+              </div>
+          </div>
+          <div class="main-content__social__trending">
+              <p class="bold left-align">Trending</p>
+              <div class="main-content__social__trending__cards">
+                
+              </div>
+          </div>
         </div>
       </div>
     </div>
