feat: Populate announcement and trending

--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
           <p class="bold left-align">Your Projects</p>
           <div class="main-content__projects__cards">
             <div class="main-content__projects__cards__card">
+              <p class="bold left-align">Heading</p>
+              <p class="left-align small">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              </p>
             </div>
             <div class="main-content__projects__cards__card">
             </div>
@@ -78,13 +82,44 @@
           <div class="main-content__social__announcements">
               <p class="bold left-align">Announcements</p>
               <div class="main-content__social__announcements__cards">
-
+                <div class="main-content__social__announcements__cards__card">
+                  <p class="bold">Latest!!!</p>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+                <div class="main-content__social__announcements__cards__card">
+                  <p class="bold">Latest!!!</p>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+                <div class="main-content__social__announcements__cards__card">
+                  <p class="bold">Latest!!!</p>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
               </div>
           </div>
           <div class="main-content__social__trending">
               <p class="bold left-align">Trending</p>
               <div class="main-content__social__trending__cards">
-                
+                <div class="main-content__social__trending__cards__card">
+                  <i></i>
+                  <div class="main-content__social__trending__cards__card__user">
+                    <p class="bold">@user</p>
+                    <p>New User</p>
+                  </div>
+                </div>
+                <div class="main-content__social__trending__cards__card">
+                  <i></i>
+                  <div class="main-content__social__trending__cards__card__user">
+                    <p class="bold">@user</p>
+                    <p>New User</p>
+                  </div>
+                </div>
+                <div class="main-content__social__trending__cards__card">
+                  <i></i>
+                  <div class="main-content__social__trending__cards__card__user">
+                    <p class="bold">@user</p>
+                    <p>New User</p>
+                  </div>
+                </div>
               </div>
           </div>
         </div>
