feat: Add icons to sidebar

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
         <div class="sidebar__header">Dashboard</div>
         <div class="sidebar__navigation">
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Messages</a></li>
-            <li><a href="#">History</a></li>
-            <li><a href="#">Tasks</a></li>
-            <li><a href="#">Community</a></li>
+            <li><img src="assets/home.svg"><a href="#">Home</a></li>
+            <li><img src="assets/card-account-details-outline.svg"><a href="#">Profile</a></li>
+            <li><img src="assets/message-reply.svg"><a href="#">Messages</a></li>
+            <li><img src="assets/clock-time-four.svg"><a href="#">History</a></li>
+            <li><img src="assets/list-box.svg"><a href="#">Tasks</a></li>
+            <li><img src="assets/account-group.svg"><a href="#">Community</a></li>
           </ul>
         </div>
         <div class="sidebar__navigation">
           <ul>
-            <li><a href="#">Settings</a></li>
-            <li><a href="#">Support</a></li>
-            <li><a href="#">Privacy</a></li>
+            <li><img src="assets/cog.svg"><a href="#">Settings</a></li>
+            <li><img src="assets/chat-question.svg"><a href="#">Support</a></li>
+            <li><img src="assets/shield-check.svg"><a href="#">Privacy</a></li>
           </ul>
         </div>
       </div>
